@@ -3,6 +3,11 @@ Changes in version 0.4
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
+* Changed the '--output' flag of the 'report' command to only take a
+  path to the target file, not its format.  Different formats are better
+  supported by implementing different subcommands, as the options they
+  may receive will vary from format to format.
+
 * Added a '--with-atf' flag to the configure script to control whether
   the ATF tests get built or not.  May be useful for packaging systems
   that do not have ATF in them yet.  Disabling ATF also cuts down the
